# agentic-flows

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  REUSE.toml  VERSIONING.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml
.dvc/: .gitignore
.github/workflows/: ci.yml  release.yml
api/failures/: index.html
api/http_failures/: index.html
api/overview/: index.html
api/public-surface/: index.html
api/python_surface/: index.html
api/schema/: index.html
api/schema-mapping/: index.html
api/v1/: schema.hash  schema.yaml
architecture/abstraction_removal/: index.html
architecture/architecture/: index.html
architecture/architecture-note/: index.html
architecture/conservation/: index.html
architecture/design_debt/: index.html
architecture/execution_cost/: index.html
architecture/execution_lifecycle/: index.html
architecture/execution_model/: index.html
architecture/experimental/: index.html
architecture/invariants/: index.html
architecture/llm_authority/: index.html
architecture/metrics/: index.html
architecture/negative_results/: index.html
architecture/observability/: index.html
architecture/pathway_limits/: index.html
cli/cli/: index.html
concepts/: index.html
concepts/core_concepts/: index.html
concepts/determinism/: index.html
concepts/failure-taxonomy/: index.html
concepts/failures/: index.html
datasets/: README.md  adversarial_evidence.jsonl.dvc.license  retrieval_corpus.jsonl.license
docs/: ARCHITECTURE.md  INVARIANTS.md  SEMANTICS.md  bijux_contracts.md  determinism.md  failures.md  index.md  vocabulary.md  what_this_is_not.md
docs/api/: failures.md  overview.md
docs/architecture/: design_debt.md  execution_cost.md  execution_lifecycle.md  execution_model.md  experimental.md  invariants.md  negative_results.md  pathway_limits.md
docs/meta/: NAMING.md
examples/: minimal_deterministic_flow.py
makefiles/: api.mk  build.mk  lint.mk  quality.mk
scripts/: check_dependency_allowlist.py  check_docs_consistency.py  check_docs_nav.py  check_md_links.py  check_no_toys_policy.py  check_root_markdown.py  helper_pip_audit.py
search/: search_index.json
tests/: conftest.py  helpers.py  test_agent_determinism.py  test_ambiguous_dependencies.py  test_artifact_store_guard.py  test_contract_violation.py  test_environment_mismatch.py  test_execution_order.py  test_golden_execution_plan.py  test_imports.py  test_invariant_canary.py  test_manifest_validation.py  test_misuse.py  test_plan_immutability.py  test_reasoning_determinism.py  test_reasoning_integrity.py  test_replay_equivalence.py  test_resolver_purity.py  test_retrieval_determinism.py  test_semantic_gate.py  test_semantic_violations.py  test_trace_immutability.py  test_verification_failure.py  test_verification_policy_required.py
(+369 files in other folders)
